fixing z-index toolbar

--- a/src/components/dashboard/toolbar/toolbar.scss
+++ b/src/components/dashboard/toolbar/toolbar.scss
@@ -10,7 +10,7 @@ $toolbar_height: 60px;
 
 .toolbar {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   height: $toolbar_height;
   background-color: #111111ed;
