--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -12,7 +12,7 @@ $toolbar_height: 60px;
 
 .toolbar {
   position: fixed;
-  z-index: 999;
+  z-index: 1;
   width: 100%;
   height: $toolbar_height;
 
